# rpi-clock

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  basic_clock.py  docker-bake.hcl  flake.nix  main.py  pigpiod.sh  pyproject.toml  test-parrot.py  test-spi.py  test.py  test_lamp.py
.github/workflows/: build.yml
clock/: alarm.py  hal.py  hardware.py  lamp.py  quick_alarm.py
rpi_clock/: __init__.py  alarm.py  api.py  button.py  clock.py  config.py  display.py  endpoint.py  fadeable.py  hal.py  lcd.py  light_sensor.py  log.py  main.py  mopidy.py  pin.py  pinmap.py  reactive.py  timer.py
rpi_clock/mqtt/: client.py  handler.py  publish.py
tests/: helpers.py  test_alarm.py  test_button.py  test_fadeable.py  test_lcd.py  test_pin.py  test_timer.py
