[tool.poetry]
name = "rpi-clock"
version = "0.1.0"
description = ""
authors = ["John Maximilian <2e0byo@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9,<3.11"
pigpio = "^1.78"
coloredlogs = "^15.0.1"
rpi-hardware-pwm = "^0.1.4"
gpiozero = "^1.6.2"
mopidy-asyncio-client = "^3.1.0"

[tool.poetry.dev-dependencies]
pytest-sugar = "^0.9.4"
pytest-asyncio = "^0.18.1"
pytest-mock = "^3.7.0"
pytest-coverage = "^0.0"
pytest-repeat = "^0.9.1"
flaky = "^3.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
