[tool.poetry]
name = "rpi-clock"
version = "0.1.0"
description = ""
authors = ["John Maximilian <2e0byo@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11,<3.13"
rpi-hardware-pwm = "^0.1.4"
gpiozero = "^2.0.1"
mopidy-asyncio-client = "^3.1.0"
fastapi = "^0.111.0"
uvicorn = "^0.30.0"
structlog = "^24.2.0"
typer = "^0.12.3"
lgpio = "^0.2.2.0"
xdg-base-dirs = "^6.0.1"
logfire = "^0.41.0"
pydantic-settings = "^2.3.1"


[tool.poetry.group.dev.dependencies]
pytest-sugar = "^1.0.0"
pytest-asyncio = "^0.23.7"
pytest-mock = "^3.14.0"
pytest-repeat = "^0.9.3"
flaky = "^3.8.1"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
rpi-clock = "rpi_clock.cli:app"

[tool.isort]
profile = "black"

[tool.docformatter]
recursive = true
black = true

[tool.ruff]
lint.select = [
    "E", # Pycodestyle
    "ERA", # Eradicate
    "F", # Pyflakes
    "T20", # Print
    "TRY002", # Create own exception
    "TRY004", # Type check without TypeError
    "TRY201", # verbose raise
    "TRY301", # raise with try
    "TRY302", # useless try except
    "TRY400", # logging.error used over logging.exception
    "TRY401", # verbose log message
    "Q", # Quotes
#     "DTZ", # Naive datetime
]

[tool.mypy]
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
packages = ["rpi_clock"]